--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
   "license": "MIT",
   "devDependencies": {
     "@microsoft/api-documenter": "^7.13.50",
-    "@rushstack/heft": "^0.38.1",
-    "@rushstack/heft-web-rig": "^0.4.13",
+    "@rushstack/heft": "0.44.2",
+    "@rushstack/heft-web-rig": "0.7.2",
     "@types/heft-jest": "1.0.2",
     "api-documenter-yaml-to-antora-asciidoc": "^0.0.0-9"
   },
