--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "test": "heft test",
     "prepare": "heft build",
     "api": "api-documenter yaml -i temp -o temp/api-yaml && api-documenter-yaml-to-antora-asciidoc asciidoc -i temp/api-yaml",
-    "semantic-release": "semantic-release"
+    "release": "release-it"
   },
   "author": "Thai Pangsakulyanont <dtinth@spacet.me> (http://dt.in.th/)",
   "license": "MIT",
@@ -26,7 +26,7 @@
     "@rushstack/heft-web-rig": "0.7.2",
     "@types/heft-jest": "1.0.2",
     "api-documenter-yaml-to-antora-asciidoc": "^0.0.0-9",
-    "semantic-release": "18.0.1"
+    "release-it": "14.12.1"
   },
   "dependencies": {
     "@types/gapi": "^0.0.41",
@@ -36,14 +36,5 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/dtinth/google-sign-in-controller.git"
-  },
-  "release": {
-    "branches": [
-      "main",
-      {
-        "name": "preview",
-        "prerelease": true
-      }
-    ]
   }
 }
