--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,8 +10,8 @@ on:
     branches:
       - main
 jobs:
-  ci:
-    name: CI
+  test:
+    name: Test
     runs-on: ubuntu-20.04
     steps:
       - name: Checkout
@@ -36,3 +36,28 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+  lint:
+    name: Lint
+    runs-on: ubuntu-20.04
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+      - name: Setup pnpm
+        uses: pnpm/action-setup@646cdf48217256a3d0b80361c5a50727664284f2 # v2.0.1
+        with:
+          version: 6.26.0
+      - name: Setup Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: 16
+          cache: pnpm
+      - name: Install dependencies and build
+        run: pnpm install --prefer-offline
+      - name: Lint
+        run: pnpx prettier --write .
+      - name: Stage changed files
+        run: git add --update
+      - name: Ensure no file is changed
+        uses: dtinth/patch-generator-action@v1
