More build system adjustments

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@rushstack/heft-web-rig": "0.7.2",
     "@types/heft-jest": "1.0.2",
     "api-documenter-yaml-to-antora-asciidoc": "^0.0.0-9",
+    "news-fragments": "1.14.2",
     "prettier": "2.5.1",
     "release-it": "14.12.1"
   },
@@ -37,5 +38,8 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/dtinth/google-sign-in-controller.git"
+  },
+  "volta": {
+    "node": "16.13.2"
   }
 }
