--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,9 +1,14 @@
 name: CI
 on:
   push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
 jobs:
-  test:
-    name: Test
+  ci:
+    name: CI
     runs-on: ubuntu-20.04
     steps:
       - name: Checkout
@@ -23,28 +28,3 @@ jobs:
         run: pnpm install --prefer-offline
       - name: Test
         run: pnpm run test
-  lint:
-    name: Lint
-    runs-on: ubuntu-20.04
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
-      - name: Setup pnpm
-        uses: pnpm/action-setup@646cdf48217256a3d0b80361c5a50727664284f2 # v2.0.1
-        with:
-          version: 6.26.0
-      - name: Setup Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: 16
-          cache: pnpm
-      - name: Install dependencies and build
-        run: pnpm install --prefer-offline
-      - name: Lint
-        run: pnpx prettier --write .
-      - name: Stage changed files
-        run: git add --update
-      - name: Ensure no file is changed
-        uses: dtinth/patch-generator-action@v1
