--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,3 +1,6 @@
+# This file is automatically managed by <https://github.com/dtinth/jslibdevkit>.
+# Any manual changes to this file may be overwritten.
+
 name: CI
 on:
   push:
@@ -28,3 +31,8 @@ jobs:
         run: pnpm install --prefer-offline
       - name: Test
         run: pnpm run test
+      - name: SonarCloud Scan
+        uses: SonarSource/sonarcloud-github-action@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Needed to get PR information, if any
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
