--- a/package.json
+++ b/package.json
@@ -24,11 +24,11 @@
     "@microsoft/api-documenter": "^7.13.50",
     "@rushstack/heft": "0.44.2",
     "@rushstack/heft-web-rig": "0.7.2",
+    "@spacet.me/news-fragments": "1.15.2-1",
     "@types/heft-jest": "1.0.2",
     "api-documenter-yaml-to-antora-asciidoc": "^0.0.0-9",
-    "news-fragments": "1.14.2",
     "prettier": "2.5.1",
-    "release-it": "14.12.1"
+    "release-it": "15.0.0-esm.3"
   },
   "dependencies": {
     "@types/gapi": "^0.0.41",
